# SNA

./: README.md  pyproject.toml
1_assignment/Q1/: q1_a.ipynb  q1_b.ipynb
1_assignment/Q2/: q2_a.ipynb  q2_b.ipynb
1_assignment/Q3/: q3_a.ipynb  q3_b.ipynb  q3_c.ipynb
Assignments/Assignment_2/: Solution.ipynb
Assignments/Assignment_3/: Solution.ipynb
Assignments/Assignment_4/: Solution.ipynb
Lectures/Lecture_1_Introduction/Practice_session/: Part_1_setup.ipynb  Part_2_git_vscode.ipynb  Part_4_collections.ipynb  Part_5_data.ipynb  Part_7_numpy.ipynb  (+2 more)
Week_11_Random_walks_and_markov_chains/Assignment/: Solution.ipynb
Week_3_Community_structures_and_node_centrality/Assignment/: Solution.ipynb
Week_7_Generating_functions/Assignment/: Solution.ipynb
Week_8_Percolation_phase_transition/Assignment/: Solution.ipynb
assignments/assignment_1/: decision.ipynb
data/: custom_template.html  example.db  networks.db  posterior_analytics.txt  word_frequencies.csv  word_frequencies.json  word_frequencies.pickled
lectures/lecture_1/: 01_01_setup.ipynb  01_02_git_vscode.ipynb  01_03_python.ipynb  01_04_collections.ipynb  01_05_data.ipynb  01_06_pandas.ipynb  01_07_numpy.ipynb  01_08_scipy.ipynb  01_09_visualising_data.ipynb  self_study_questions.ipynb
lectures/lecture_2/: 02_01_pathpy.ipynb  02_02_network_data.ipynb  02_03_network_visualisation.ipynb  02_04_paths.ipynb  02_05_connected_components.ipynb  self_study_questions.ipynb
lectures/lecture_3/: 03_01_modularity.ipynb  03_02_community_assortativity.ipynb  03_03_centralities.ipynb  self_study_questions.ipynb
(+32 files in other folders)
