[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["Mr. Oleksandr Tarasov <tarasik201617@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
pathpy3 = {git = "git@github.com:pathpy/pathpy.git"}
matplotlib = "^3.6.3"
seaborn = "^0.12.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
